--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ more-itertools==4.1.0
 pluggy==0.6.0
 py==1.5.3
 PyAutoIt==0.4
-pytest==3.5.1
+pytest
 pytest-html==1.17.0
 pytest-metadata==1.7.0
 selenium==3.9.0
