--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ colorama==0.3.9
 more-itertools==4.1.0
 pluggy==0.6.0
 py==1.5.3
-PyAutoIt==0.4
+# PyAutoIt==0.4
 pytest==3.5.1
 pytest-html==1.17.0
 pytest-metadata==1.7.0
