Updated the crm_login calls

--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -3,19 +3,19 @@ tests:
   class: CalendarView
   tests:
     - test_check_day_tab
-#    - test_check_week_tab
-#    - test_check_month_tab
-#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-#  class: LeadModuleTest
-#  tests:
-#    - test_create_lead
-#    - test_edit_lead
-#    - test_perform_convert_lead
-#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
-#  class: TabLeadsModuleCRM
-#  tests:
-#    - test_searching_lead_modules
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
-#  class: SearchingClientsTestCRM
-#  tests:
-#    - test_make_searching_client_module
+    - test_check_week_tab
+    - test_check_month_tab
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
+  class: LeadModuleTest
+  tests:
+    - test_create_lead
+    - test_edit_lead
+    - test_perform_convert_lead
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
+  class: TabLeadsModuleCRM
+  tests:
+    - test_searching_lead_modules
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
+  class: SearchingClientsTestCRM
+  tests:
+    - test_make_searching_client_module
