Fixed some more tests for FX platform. Configuration mechanism - some updates.

--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -1,8 +1,14 @@
 brands:
-- name: newfxcrm.loc
-  config_file: newfxcrm.loc.yml
+#- name: newfxcrm.loc
+#  config_file: newfxcrm.loc.yml
+#- name: forexcrm.loc
+#  config_file: forexcrm.loc.yml
 #- name: newforexdev
 #  config_file: new_forex_dev.yml
+#- name: forexdev
+#  config_file: forex_dev.yml
+- name: forexstaging
+  config_file: forex_staging.yml
 #- name: newforexstaging
 #  config_file: new_forex_staging.yml
 #- name: newforexqa
