--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -3,15 +3,15 @@ brands:
 #  config_file: newfxcrm.loc.yml
 #- name: forexcrm.loc
 #  config_file: forexcrm.loc.yml
-#- name: newforexdev
-#  config_file: new_forex_dev.yml
+- name: newforexdev
+  config_file: new_forex_dev.yml
 #- name: forexdev
 #  config_file: forex_dev.yml
-- name: forexstaging
-  config_file: forex_staging.yml
+#- name: forexstaging
+#  config_file: forex_staging.yml
 #- name: newforexstaging
 #  config_file: new_forex_staging.yml
-#- name: newforexqa
+#- name: newforexqaF
 #  config_file: new_forex_qa.yml
 #- name: itrader
 #  config_file: itrader.yml
