multi-runner-add-tests-brands: smoke tests were added to tests.yml

--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,5 +1,81 @@
 tests_config:
   # Smoke test suite
+
+- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
+  class: FilterModulesTest
+  tests:
+    - test_create_filter_clients_module
+    - test_create_filter_documents_module
+    - test_create_filter_leads_module
+    - test_create_filter_help_desk
+    - test_create_filter_trading_account_module
+
+- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+  class: SignUpTest
+  tests:
+    - test_check_sign_up
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
+  class: SearchingClientsTestCRM
+  tests:
+    - test_make_searching_client_module
+
+- module: src.test.python.ui.automation.implementation.ca.Test_Support_Ticket
+  class: CreateSupportTicketTestCa
+  tests:
+    - test_create_ticket
+
+- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Live_Accounts
+  class: AddNewLiveAccountTestCA
+  tests:
+     - test_check_add_live_account_eur_currency
+     - test_check_add_live_account_gbr_currency
+     - test_check_add_live_account_cad_currency
+     - test_check_add_live_account_jpy_currency
+
+- module: src.test.python.ui.automation.implementation.ca.Test_Add_Demo_Accounts
+  class: AddDemoAccountsTestCA
+  tests:
+    - test_check_add_demo_account_usd_currency
+    - test_check_add_demo_account_eur_currency
+    - test_check_add_demo_account_gbr_currency
+    - test_check_add_demo_account_cad_currency
+
+- module: src.test.python.ui.automation.implementation.ca.Test_Make_Deposit
+  class: DepositTestCa
+  tests:
+    - test_make_deposit_from_ca
+
+- module: src.test.python.ui.automation.implementation.ca.Test_Make_Withdraw
+  class: WithdrawTestCA
+  tests:
+    - test_make_withdraw_ca
+
+- module: src.test.python.ui.automation.implementation.ca.Test_Make_Transfer_Funds
+  class: TransferFundsTestCA
+  tests:
+    - test_make_transfer_funds
+
+- module: src.test.python.ui.automation.implementation.ca.Test_Download_Documents
+  class: DownloadDocumentsTestCA
+  tests:
+    - test_make_dowload_documents
+
+- module: src.test.python.ui.automation.implementation.ca.Test_Change_Password
+  class: ChangePasswordTestCA
+  tests:
+    - test_change_password_from_ca
+
+- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
+  class: PersonalDetailsUpdateTestCA
+  tests:
+     - test_perform_client_update_from_CA
+     - test_perform_client_update_from_CRM
+
+module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
+  class: DepositTestCRM
+  tests:
+    - test_make_deposit_crm  # make a deposit into a trading account from the crm
+
 - module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
   class: CalendarView
   tests:
@@ -20,10 +96,6 @@ tests_config:
     - test_mass_edit_lead
     - test_mass_assign_lead_module
     - test_perform_convert_lead   # Creates a lead and converts it to a client
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
-  class: SearchingClientsTestCRM
-  tests:
-    - test_make_searching_client_module   # Searches for a client.
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Add_Interaction
   class: AddInteraction
   tests:
@@ -43,11 +115,7 @@ tests_config:
   tests:
     - test_change_client_password_from_crm  # change a client account password from the crm
     - test_change_mt4_password_from_crm  # change an MT4 account password from the crm
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
-  class: DepositTestCRM
-  tests:
-    - test_make_deposit_crm  # make a deposit into a trading account from the crm
-
+-
   # CRM test suite
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Credit_In
   class: CreditInTestCRM
