multi-runner-add-tests-brands: links to brands were added to brands.yml

--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -65,3 +65,66 @@ brands:
 #  config_file: xtraderfx.yml
 #- name: firstindex
 #  config_file: firstindex.yml
+#- name: coinstec
+#  config_file: coinstec.yml
+#- name: swisscci
+#  config_file: swisscci.yml
+#- name: tradospot
+#  config_file: tradospot.yml
+#- name: etoroc
+#  config_file: etoroc.yml
+#- name: lq-fx
+#  config_file: lq-fx.yml
+#- name: 24btcmarket
+#  config_file: 24btcmarket.yml
+#- name: marketsplus
+#  config_file: marketsplus.yml
+#- name: eu4xsolutions
+#  config_file: eu4xsolutions.yml
+#- name: jonesmutual
+#  config_file: jonesmutual.yml
+#- name: hamiltonfordgroup
+#  config_file: hamiltonfordgroup.yml
+#- name: baronsvc
+#  config_file: baronsvc.yml
+#- name: mpcrypto
+#  config_file: mpcrypto.yml
+#- name: forexbestmarket
+#  config_file: forexbestmarket.yml
+#- name: newrichmarket
+#  config_file: newrichmarket.yml
+#- name: solocapitlas
+#  config_file: solocapitlas.yml
+#- name: goldenmarkets
+#  config_file: goldenmarkets.yml
+#- name: safemarkets
+#  config_file: safemarkets.yml
+#- name: optionstars
+#  config_file: optionstars.yml
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
