multi-runner-add-tests-brands: links to brands were added to brands.yml

--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -91,8 +91,8 @@ brands:
 #  config_file: mpcrypto.yml
 #- name: forexbestmarket
 #  config_file: forexbestmarket.yml
-#- name: newrichmarket
-#  config_file: newrichmarket.yml
+#- name: newrichmarkets
+#  config_file: newrichmarkets.yml
 #- name: solocapitlas
 #  config_file: solocapitlas.yml
 #- name: goldenmarkets
