--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -189,7 +189,8 @@ tests_config:
   class: TabFinancialTransaction
   tests:
     - test_check_all_tab_from_financial_transactions
-    - test_check_searching_by_column
+    - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
+    - test_check_search_via_button # Check search using search button
 #- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
 #  class: MyDashboardActionsTest
 #  tests:
