--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -1,20 +1,20 @@
 brands:
-### testing environments - old forex
-##- name: forexcrm.loc
-##  config_file: forexcrm.loc.yml
-##- name: forexdev
-##  config_file: forex_dev.yml
+## testing environments - old forex
+#- name: forexcrm.loc
+#  config_file: forexcrm.loc.yml
+#- name: forexdev
+#  config_file: forex_dev.yml
 #- name: forexstaging
 #  config_file: forex_staging.yml
-### testing environments - new forex
+## testing environments - new forex
 #- name: newfxcrm.loc
 #  config_file: newfxcrm.loc.yml
-- name: newforexdev
-  config_file: new_forex_dev.yml
+#- name: newforexdev
+#  config_file: new_forex_dev.yml
 ##- name: newforexstaging
 ##  config_file: new_forex_staging.yml
-##- name: newforexqa
-##  config_file: new_forex_qa.yml
+#- name: newforexqa
+#  config_file: new_forex_qa.yml
 ### production environments - old forex
 #- name: itrader
 #  config_file: itrader.yml
@@ -30,7 +30,7 @@ brands:
 #  config_file: rimarkets.yml
 #- name: kayafx
 #  config_file: kaya_fx.yml
-### production environmets - new forex
+## production environmets - new forex
 #- name: uft
 #  config_file: uft.yml
 #- name: brokerz
@@ -101,11 +101,40 @@ brands:
 #  config_file: safemarkets.yml
 #- name: optionstars
 #  config_file: optionstars.yml
-
-
-
-
-
+#- name: triomarkets
+#  config_file: triomarkets.yml
+#- name: ogtrade
+#  config_file: ogtrade.yml
+#- name: fm-fx
+#  config_file: fm-fx.yml
+#- name: brokerxp
+#  config_file: brokerxp.yml
+#- name: finmarket
+#  config_file: finmarket.yml
+#- name: fxpmarkets
+#  config_file: fxpmarkets.yml
+#- name: soarfx
+#  config_file: soarfx.yml
+#- name: highfx
+#  config_file: highfx.yml
+- name: mlnfx
+  config_file: mlnfx.yml
+- name: gmo
+  config_file: gmo.yml
+- name: gmo-dev
+  config_file: gmo-dev.yml
+- name: mtxplus
+  config_file: mtxplus.yml
+- name: 24fxm
+  config_file: 24fxm.yml
+- name: stoxmarket
+  config_file: stoxmarket.yml
+- name: alphabetfx
+  config_file: alphabetfx.yml
+- name: kbcapitals
+  config_file: kbcapitals.yml
+- name: oinvestsa
+  config_file: oinvestsa.yml
 
 
 
