--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -1,141 +1,142 @@
 brands:
 # testing environments - old forex
-- name: forexcrm.loc
-  config_file: forexcrm.loc.yml
-- name: forexdev
-  config_file: forex_dev.yml
-- name: forexstaging
-  config_file: forex_staging.yml
-# testing environments - new forex
-- name: newfxcrm.loc
-  config_file: newfxcrm.loc.yml
-- name: newforexdev
-  config_file: new_forex_dev.yml
-#- name: newforexstaging
-#  config_file: new_forex_staging.yml
-- name: newforexqa
-  config_file: new_forex_qa.yml
-## production environments - old forex
-- name: itrader
-  config_file: itrader.yml
-- name: itrader_global
-  config_file: itrader_global.yml
-- name: otcapital
-  config_file: otcapital.yml
-- name: urf
-  config_file: urf_financial.yml
+#- name: forexcrm.loc
+#  config_file: forexcrm.loc.yml
+#- name: forexdev
+#  config_file: forex_dev.yml
+#- name: forexstaging
+#  config_file: forex_staging.yml
+## testing environments - new forex
+#- name: newfxcrm.loc
+#  config_file: newfxcrm.loc.yml
+#- name: newforexdev
+#  config_file: new_forex_dev.yml
+##- name: newforexstaging
+##  config_file: new_forex_staging.yml
+#- name: newforexqa
+#  config_file: new_forex_qa.yml
+### production environments - old forex
+#- name: itrader
+#  config_file: itrader.yml
+#- name: itrader_global
+#  config_file: itrader_global.yml
+#- name: otcapital
+#  config_file: otcapital.yml
+#- name: urf
+#  config_file: urf_financial.yml
+##- name: gmo
+##  config_file: gmo_trading.yml
+#- name: rimarkets
+#  config_file: rimarkets.yml
+#- name: kayafx
+#  config_file: kaya_fx.yml
+## production environmets - new forex
+#- name: uft
+#  config_file: uft.yml
+#- name: brokerz
+#  config_file: brokerz.yml
+#- name: 4xfx
+#  config_file: 4xfx.yml
+#- name: herdos
+#  config_file: herdos.yml
+#- name: ptbanc
+#  config_file: ptbanc.yml
+#- name: royal_cfds
+#  config_file: royal_cfds.yml
+#- name: intelligent_capital
+#  config_file: intelligent_capital.yml
+#- name: solid_fx
+#  config_file: solid_fx.yml
+#- name: FXMarketPro
+#  config_file: fx_markets_pro.yml
+#- name: q8
+#  config_file: q8.yml
+#- name: 2mercados
+#  config_file: 2mercados.yml
+#- name: axa_markets
+#  config_file: axa_markets.yml
+#- name: aztrades
+#  config_file: aztrades.yml
+#- name: bots
+#  config_file: bots.yml
+#- name: kontofx
+#  config_file: kontofx.yml
+#- name: xtraderfx
+#  config_file: xtraderfx.yml
+#- name: firstindex
+#  config_file: firstindex.yml
+#- name: coinstec
+#  config_file: coinstec.yml
+#- name: swisscci
+#  config_file: swisscci.yml
+#- name: tradospot
+#  config_file: tradospot.yml
+#- name: etoroc
+#  config_file: etoroc.yml
+#- name: lq-fx
+#  config_file: lq-fx.yml
+#- name: 24btcmarket
+#  config_file: 24btcmarket.yml
+#- name: marketsplus
+#  config_file: marketsplus.yml
+#- name: eu4xsolutions
+#  config_file: eu4xsolutions.yml
+#- name: jonesmutual
+#  config_file: jonesmutual.yml
+#- name: hamiltonfordgroup
+#  config_file: hamiltonfordgroup.yml
+#- name: baronsvc
+#  config_file: baronsvc.yml
+#- name: mpcrypto
+#  config_file: mpcrypto.yml
+#- name: forexbestmarket
+#  config_file: forexbestmarket.yml
+#- name: newrichmarkets
+#  config_file: newrichmarkets.yml
+#- name: solocapitlas
+#  config_file: solocapitlas.yml
+#- name: goldenmarkets
+#  config_file: goldenmarkets.yml
+#- name: safemarkets
+#  config_file: safemarkets.yml
+#- name: optionstars
+#  config_file: optionstars.yml
+#- name: triomarkets
+#  config_file: triomarkets.yml
+#- name: ogtrade
+#  config_file: ogtrade.yml
+#- name: fm-fx
+#  config_file: fm-fx.yml
+#- name: brokerxp
+#  config_file: brokerxp.yml
+#- name: finmarket
+#  config_file: finmarket.yml
+#- name: fxpmarkets
+#  config_file: fxpmarkets.yml
+#- name: soarfx
+#  config_file: soarfx.yml
+#- name: highfx
+#  config_file: highfx.yml
+#- name: mlnfx
+#  config_file: mlnfx.yml
 #- name: gmo
-#  config_file: gmo_trading.yml
-- name: rimarkets
-  config_file: rimarkets.yml
-- name: kayafx
-  config_file: kaya_fx.yml
-# production environmets - new forex
-- name: uft
-  config_file: uft.yml
-- name: brokerz
-  config_file: brokerz.yml
-- name: 4xfx
-  config_file: 4xfx.yml
-- name: herdos
-  config_file: herdos.yml
-- name: ptbanc
-  config_file: ptbanc.yml
-- name: royal_cfds
-  config_file: royal_cfds.yml
-- name: intelligent_capital
-  config_file: intelligent_capital.yml
-- name: solid_fx
-  config_file: solid_fx.yml
-- name: FXMarketPro
-  config_file: fx_markets_pro.yml
-- name: q8
-  config_file: q8.yml
-- name: 2mercados
-  config_file: 2mercados.yml
-- name: axa_markets
-  config_file: axa_markets.yml
-- name: aztrades
-  config_file: aztrades.yml
-- name: bots
-  config_file: bots.yml
-- name: kontofx
-  config_file: kontofx.yml
-- name: xtraderfx
-  config_file: xtraderfx.yml
-- name: firstindex
-  config_file: firstindex.yml
-- name: coinstec
-  config_file: coinstec.yml
-- name: swisscci
-  config_file: swisscci.yml
-- name: tradospot
-  config_file: tradospot.yml
-- name: etoroc
-  config_file: etoroc.yml
-- name: lq-fx
-  config_file: lq-fx.yml
-- name: 24btcmarket
-  config_file: 24btcmarket.yml
-- name: marketsplus
-  config_file: marketsplus.yml
-- name: eu4xsolutions
-  config_file: eu4xsolutions.yml
-- name: jonesmutual
-  config_file: jonesmutual.yml
-- name: hamiltonfordgroup
-  config_file: hamiltonfordgroup.yml
-- name: baronsvc
-  config_file: baronsvc.yml
-- name: mpcrypto
-  config_file: mpcrypto.yml
-- name: forexbestmarket
-  config_file: forexbestmarket.yml
-- name: newrichmarkets
-  config_file: newrichmarkets.yml
-- name: solocapitlas
-  config_file: solocapitlas.yml
-- name: goldenmarkets
-  config_file: goldenmarkets.yml
-- name: safemarkets
-  config_file: safemarkets.yml
-- name: optionstars
-  config_file: optionstars.yml
-- name: triomarkets
-  config_file: triomarkets.yml
-- name: ogtrade
-  config_file: ogtrade.yml
-- name: fm-fx
-  config_file: fm-fx.yml
-- name: brokerxp
-  config_file: brokerxp.yml
-- name: finmarket
-  config_file: finmarket.yml
-- name: fxpmarkets
-  config_file: fxpmarkets.yml
-- name: soarfx
-  config_file: soarfx.yml
-- name: highfx
-  config_file: highfx.yml
-- name: mlnfx
-  config_file: mlnfx.yml
-- name: gmo
-  config_file: gmo.yml
-- name: gmo-dev
-  config_file: gmo-dev.yml
-- name: mtxplus
-  config_file: mtxplus.yml
-- name: 24fxm
-  config_file: 24fxm.yml
-- name: stoxmarket
-  config_file: stoxmarket.yml
-- name: alphabetfx
-  config_file: alphabetfx.yml
-- name: kbcapitals
-  config_file: kbcapitals.yml
-- name: oinvestsa
-  config_file: oinvestsa.yml
-
+#  config_file: gmo.yml
+#- name: gmo-dev
+#  config_file: gmo-dev.yml
+#- name: mtxplus
+#  config_file: mtxplus.yml
+#- name: 24fxm
+#  config_file: 24fxm.yml
+#- name: stoxmarket
+#  config_file: stoxmarket.yml
+#- name: alphabetfx
+#  config_file: alphabetfx.yml
+#- name: kbcapitals
+#  config_file: kbcapitals.yml
+#- name: oinvestsa
+#  config_file: oinvestsa.yml
+- name: rimarkets-staging
+  config_file: rimarkets-staging.yml
 
 
 
