multi-runner-add-tests-brands-ONLY_RUN_ON_BRANDS-modified_for_brand: - test 'test_create_filter_clients_module' was added - test 'test_create_filter_documents_module' was added

--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -45,8 +45,8 @@ brands:
 #  config_file: royal_cfds.yml
 #- name: intelligent_capital
 #  config_file: intelligent_capital.yml
-#- name: solid_fx
-#  config_file: solid_fx.yml
+- name: solid_fx
+  config_file: solid_fx.yml
 #- name: FXMarketPro
 #  config_file: fx_markets_pro.yml
 #- name: q8
@@ -135,8 +135,8 @@ brands:
 #  config_file: kbcapitals.yml
 #- name: oinvestsa
 #  config_file: oinvestsa.yml
-- name: rimarkets-staging
-  config_file: rimarkets-staging.yml
+#- name: rimarkets-staging
+#  config_file: rimarkets-staging.yml
 
 
 
