--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -64,6 +64,7 @@ tests_config:
   class: CreditInTestCRM
   tests:
     - test_make_credit_in_crm
+    - test_make_credit_in_from_crm
 #Other
 - module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
   class: CalendarView
