multi-runner-add-tests-brands-ONLY_RUN_ON_BRANDS-1003: create event and edit event were added, config and default were changed

--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -4,8 +4,8 @@ user_name: pandaqa
 crm_password: xUQ7hrr9VF
 otp_secret:
 FirstLeadInfo:
-  first_name: "John"
-  last_name: "Doe"
+  EVAL_first_name: "'testqa_' + (''.join(random.sample(string.ascii_uppercase*6, 6)))"
+  last_name: "DoeA"
   mobile: "8888888"
   fax: "5555"
   EVAL_email: "'testqa_' + (datetime.utcnow().strftime('%Y%m%d_%H%M%S.%f')) + '@pandats.com'"
@@ -61,7 +61,8 @@ client_1:
   test_filter: "Test Clients"
   client_status_1:
   # EVAL_first_name: "'John_' + (datetime.utcnow().strftime('%Y%m%d_%H%M%S'))"
-  first_name: "John-test" # manual config
+#  first_name: "John-test" # manual config
+  EVAL_first_name: "'testqa_' + (''.join(random.sample(string.ascii_uppercase*6, 6)))"
   last_name: "Doe"
   EVAL_email: "'john_doe_' + (datetime.utcnow().strftime('%Y%m%d_%H%M%S')) + '@pandats.com'"
 #  email: "john_doe_20180823_131412@pandats.com" # manual config
