multi-runner-add-tests-brands-ONLY_RUN_ON_BRANDS-1003: event and edit event were changed, open and edit mt4 were added

--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -100,13 +100,13 @@ trading_account_1:
   group: "USD"
   leverage: "100"
 trading_account_1_demo_upd:
-  trading_account_demo: "newForex Demo"
-  group: "EUR"
+  trading_account_demo: "Demo"
+  group: "demo"
   leverage: "200"
 trading_account_1_live:
   server: "Live"
   currency: "USD"
-  group: "USD"
+  group: "demo"
   leverage: "100"
 module_clients_filter:
   test_filter: "TestFilterClientsModule"
